# dcbs_project-NEW

./: .flake8  .gitignore  CHANGES_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  REFACTORING_SUMMARY.md  __init__.py  analyze_detailed_predictions.py  analyze_disagreements.py  analyze_full_results.py  analyze_phi_results.py  analyze_results.py  analyze_test_data.py  cache_comparison_test.py  cache_optimization_tests.py  check_gpu.py  check_predictions.py  cluster_analysis.py  compare_clustering_methods.py  compare_methods.py  compare_methods_improved.py  create_arc_charts.py  create_arc_charts_simple.py  create_charts.py  create_demo_chart.py  create_figures.py  create_final_analysis.py  dcbs_optimized.py  debug_sampling_issues.py  debug_tokenization.py  download_full_arc.py  eval_output.txt  extract_results.py  fast_cache_test.py  fisher_test.py  full_eval_output.txt  model_comparison_plan.md  profile_kmeans_bottleneck.py  (+29 more)
checkpoints/: checkpoint_comprehensive_20250628_210347_arc_easy_dbscan.tmp  checkpoint_comprehensive_20250628_210347_arc_easy_hierarchical.tmp  checkpoint_eval_20250629_142725.tmp
config/: evaluation.yaml
configs/: dcbs_config.yaml  study_config.yaml
data/: arc_easy_full.json  arc_easy_processed.json  bench_wino.json  bench_wino_1000.json  bench_wino_test.json  prompts.txt
data_loaders/: __init__.py
dcbs/: __init__.py  cache_manager.py  clustering.py  optimizations.py  sampler.py
docs/: DCBS_Algorithm.md  Enhancement_Summary.md  enhancements.md  generate_docs.py  research_insights.md
notebooks/: 01_token_level_analysis.ipynb
old/: template_manager.py
src/: dcbs.py  (+27 more)
(+153 files in other folders)
